# chat-memory

./: .gitignore  AGENT.md  LICENSE  README.md  chat-memory.spec  chat_memory.py  compose.yaml  config.py  db.py  init.sql  main.py  pyproject.toml  test_sqlite_vec_extension.py
app/mcp/: server.py
app/mcp/db/: queries.py  setup.py
app/mcp/embedding/: embedding.py
